解决上传图片问题
